fixed the readme

--- a/readme
+++ b/readme
@@ -17,4 +17,4 @@ uvicorn server.src.server:app --host 0.0.0.0 --port 8000 --reload
 
 to run a client: 
 
-python chat-app\client.python
+python chat-app\client.py
